[gd_scene load_steps=3 format=3 uid="uid://cfrm3whxlowps"]

[ext_resource type="Script" uid="uid://b2knp6pe4s882" path="res://UI/performance_monitor/performance_monitor.gd" id="1_qggpk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p4h8a"]
bg_color = Color(0, 0, 0, 1)

[node name="PerformanceMonitor" type="CanvasLayer"]
layer = 500
script = ExtResource("1_qggpk")

[node name="StatsContainer" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_bottom = 156.0
grow_horizontal = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p4h8a")

[node name="StatsDisplay" type="VBoxContainer" parent="StatsContainer"]
layout_mode = 2
alignment = 1

[node name="FPSLabel" type="Label" parent="StatsContainer/StatsDisplay"]
layout_mode = 2
text = "FPS: 100 (0.1 ms)"
horizontal_alignment = 2

[node name="MemoryLabel" type="Label" parent="StatsContainer/StatsDisplay"]
layout_mode = 2
text = "Memory: 100 MB"
horizontal_alignment = 2

[node name="ObjectsLabel" type="Label" parent="StatsContainer/StatsDisplay"]
layout_mode = 2
text = "Objects: 99999
Nodes: 99999
Resources: 99999"
horizontal_alignment = 2

[node name="DrawCallsLabel" type="Label" parent="StatsContainer/StatsDisplay"]
layout_mode = 2
text = "Draw calls: 99999"
horizontal_alignment = 2
